--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,15 @@
 html {
-    position: relative;
     min-height: 100%;
-    padding-bottom: 75px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container {
+    flex: 1 0 auto;
 }
 
 .container-fluid {
@@ -42,6 +50,7 @@ html {
     width: 100%;
     background-color: #f5f5f5;
     padding: 0.4em 1em;
+    margin-top: auto;
 
     p {
       margin: 0em;
